--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "project",
   "devDependencies": {
+    "css-loader": "^7.1.2",
+    "style-loader": "^4.0.0",
     "ts-loader": "*",
     "typescript": "*",
     "webpack": "^5.91.0",
