--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "project",
   "devDependencies": {
     "css-loader": "^7.1.2",
+    "file-loader": "^6.2.0",
     "style-loader": "^4.0.0",
     "ts-loader": "*",
     "typescript": "*",
